Documentatie van alle methodes

--- a/Documentatie/html/search.html
+++ b/Documentatie/html/search.html
@@ -82,7 +82,7 @@
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2018, Team-9:Aleandro, Qing, Lukas, Roel, Arthur.
+        &#169; Copyright 2018, Qing,Aleandro,Lukas,Arthur,Roel.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.4.
     </div>
   </body>
