Documentatie Naam verbeteren

--- a/Documentatie/html/Astar.html
+++ b/Documentatie/html/Astar.html
@@ -55,7 +55,7 @@
 <col class="field-body" />
 <tbody valign="top">
 <tr class="field-odd field"><th class="field-name">Parameters:</th><td class="field-body"><ul class="first last simple">
-<li><strong>gates</strong> – type: Gate</li>
+    <li><strong>gates</strong> – type: List of Gates</li>
 <li><strong>file</strong> – type: String There is a default file, but it is possible to change it with another file</li>
 </ul>
 </td>
@@ -341,7 +341,7 @@
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2018, Qing,Aleandro,Lukas,Arthur,Roel.
+        &#169; Copyright 2018, Qing, Aleandro, Lucas, Arthur en Roel.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.4.
     </div>
   </body>
