--- a/Documentatie/html/Pac-Man.html
+++ b/Documentatie/html/Pac-Man.html
@@ -407,7 +407,7 @@ Otherwise you can try again to get a higher score
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2018, Qing,Aleandro,Lukas,Arthur,Roel.
+        &#169; Copyright 2018, Qing, Aleandro, Lucas, Arthur en Roel.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.4.
     </div>
   </body>
