Pushen laatste versie van Klassendiagram wat tweaks En kleine dingen aangepast in Docu en klassen

--- a/Documentatie/html/Ghost.html
+++ b/Documentatie/html/Ghost.html
@@ -86,7 +86,9 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Returns:</th><td class="field-body">void</td>
+<tr class="field-odd field">
+    <th class="field-name">Returns:</th>
+    <td class="field-body">Coordinate</td>
 </tr>
 </tbody>
 </table>
@@ -102,7 +104,9 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Returns:</th><td class="field-body">void</td>
+<tr class="field-odd field">
+    <th class="field-name">Returns:</th>
+    <td class="field-body">Coordinate</td>
 </tr>
 </tbody>
 </table>
