--- a/Documentatie/html/Coordinate.html
+++ b/Documentatie/html/Coordinate.html
@@ -78,13 +78,12 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Param:</th><td class="field-body">x (Coordinate): type: int</td>
-</tr>
-<tr class="field-even field"><th class="field-name">Param:</th><td class="field-body">y (Coordinate): type: int</td>
-</tr>
-<tr class="field-odd field"><th class="field-name">Param:</th><td class="field-body">is_wall: type: boolean</td>
-</tr>
-<tr class="field-even field"><th class="field-name">Returns:</th><td class="field-body">void</td>
+<tr class="field-odd field"><th class="field-name">Parameters:</th><td class="field-body"><ul class="first last simple">
+<li><strong>x(Coordinate)</strong> – type: int</li>
+<li><strong>y(Coordinate)</strong> – type: int</li>
+<li><strong>is_wall</strong> – type: Boolean</li>
+</ul>
+</td>
 </tr>
 </tbody>
 </table>
