Alle html bestanden moeten normaal foutvrij zijn

--- a/Documentatie/html/Character.html
+++ b/Documentatie/html/Character.html
@@ -87,9 +87,11 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Param:</th><td class="field-body">coordinate:  type: Coordinate:  where to draw the object</td>
-</tr>
-<tr class="field-even field"><th class="field-name">Param:</th><td class="field-body">image: what image to draw</td>
+<tr class="field-odd field"><th class="field-name">Parameters:</th><td class="field-body"><ul class="first last simple">
+<li><strong>coordinate</strong> – type: Coordinate. Where to draw the object</li>
+<li><strong>image</strong> – type: image. Use an image file</li>
+</ul>
+</td>
 </tr>
 <tr class="field-odd field"><th class="field-name">Returns:</th><td class="field-body">void</td>
 </tr>
